feat: revise cart n category logic
